# server

./: .gitignore  Cargo.toml  README.md  bors.toml  deny.toml  sqlx-data.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  rust.yml
crates/starwars/: Cargo.toml
migrations/: 20210714101321_create_user.sql  20210801102833_create_users.sql  20210801113943_create_pubkeys.sql  20210810131733_create_user_table.sql  20210810131847_create_cert_table.sql  20210810131847_create_pub_cert_table.sql  20210810132006_creaete_session_info_table.sql  20210811110100_create_index_token_expiry.sql  20210812105135_create_table_denied_tokens.sql  20210919114416_create_certifications_table.sql  20210925182107_set_primary_key_certifications.sql  20210926155136_create_index_on_certifications.target_cert.sql  20220318121420_sessions.sql  20220318132536_revoked_sessions.sql
other/: config.sample
other/test_keys/: README  bob.asc  bob.pgp  bob_exported.pgp  bob_unencrypted.pgp  carl_invalid_key_algo.pgp  challenge  challenge_signature.pgp  challenge_signature_by_other_user.pgp  client.asc  client.pgp  client_keyring.asc  client_keyring.pgp  client_subkey_c.pgp  david_cert_with_expiration_date.pgp  erik.asc  erik.pgp  erik_bob_keyring.asc  erik_bob_keyring.pgp  erik_exported.pgp  erik_unencrypted.pgp  invalid_challenge_signature.pgp  server_key.asc  signature_for_other_challenge.pgp
other/test_keys/issue_6/: bob_certify_erik.asc
other/tests/certificates/: README.txt  alice_066C94E04015FBD26A40B67B5D750CFB91A0871D.pgp  bob_DD2B926D6EE00C749565C9B2AB4B2F5F3D291D6B.pgp  carl_99ED426F7C1AF0E719413F98DDB353409BEAEF86.pgp
other/tests/challenge_proof/: README.txt  gen_proof.py
other/tests/missing_key/: c_a_e.pgp  s_c_a.pgp  s_c_a_e_e.pgp  s_c_a_es.pgp  s_c_a_et_es.pgp  s_c_e.pgp  valid.pgp
other/tests/policy/: expiration_date.pgp  nist_p_521.pgp  rsa_4096.pgp  subkey_nist_p_384.pgp  unencrypted.pgp
src/: authn.rs  config.rs  main.rs  oidc.rs
src/ac/: mod.rs  permissions.rs
src/actors/: authenticated_user.rs  mod.rs  user.rs
src/auth/: authentication.rs  mod.rs  session.rs  signup.rs  token.rs
src/authn/: identity.rs
src/certificate/: mod.rs  policy.rs  priv_cert.rs  pub_cert.rs
src/config/: mod.rs
src/fallible/: errors.rs  mod.rs
src/graphql/: bytes.rs  mod.rs  node.rs
src/guards/: authentication_guard.rs  mod.rs
src/loader/: cert_loader.rs  certification_loader.rs  mod.rs  token_loader.rs  user_loader.rs
src/models/: mod.rs  user.rs
src/models/graphql/: guards.rs  interfaces.rs  mod.rs  mutations.rs  queries.rs  scalars.rs  schema.rs  types.rs
src/tests/: permissions.rs
src/trust/: certification.rs  mod.rs
