[package]
name = "minkan_server"
version = "0.1.0"
authors = [
    "Erik Tesar <erik@erik-tesar.com>",
]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
actix = "0.10"
actix-web = "3"
async-graphql = { git = "https://github.com/minkan-chat/async-graphql.git", features = ["apollo_tracing", "uuid", "dataloader"]}
async-graphql-actix-web = { git = "https://github.com/minkan-chat/async-graphql.git" }
bitflags = "1.3"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
sqlx = { version = "0.4", features = ["chrono", "ipnetwork", "macros", "migrate", "offline", "postgres", "runtime-actix-rustls", "uuid"] }
serde = { version = "1", features = ["derive"]}
serde_cbor = "0.11"
serde_json = "1.0.66"
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = { version = "1", features = ["serde"] }
moka = { version = "0.5", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.4"
hex = "0.4.3"
argon2 = "0.2"
regex = "1.5.4"
lazy_static = "1.4.0"
jsonwebtoken = "8.0.0-beta.2"
anyhow = "1.0.43"
sequoia-openpgp = { version = "1.3", default-features = false}
async-trait = "0.1.51"
actix-web-httpauth = "0.5.1"
futures = "0.3.17"
redis = { version = "0.21.2", features = ["async-std-comp", "aio", "r2d2"] }
r2d2 = "0.8.9"
figment = { version = "0.10.6", features = ["env", "toml"]}
directories = "3"

[features]
# This is a workaround for https://github.com/rust-lang/cargo/issues/1197
# On windows disable default features when building and enable the "win" feature
# We won't need this anymore if Cargo supports target feature flags or we have
# a full rust crypto backend (no c/c++ dependencies).
default = ["unix"]
win = ["sequoia-openpgp/crypto-cng"]
unix = ["sequoia-openpgp/crypto-nettle"]
